# ChangeLog for dev-libs/libgusb
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libgusb/ChangeLog,v 1.47 2015/03/29 10:33:25 jer Exp $

  29 Mar 2015; Jeroen Roovers <jer@gentoo.org> libgusb-0.2.4.ebuild:
  Stable for HPPA (bug #534012).

  15 Mar 2015; Pacho Ramos <pacho@gentoo.org> libgusb-0.2.4.ebuild:
  x86 stable, bug 534012

  14 Mar 2015; Pacho Ramos <pacho@gentoo.org> libgusb-0.2.4.ebuild:
  amd64 stable, bug 534012

*libgusb-0.2.4 (24 Jan 2015)

  24 Jan 2015; Pacho Ramos <pacho@gentoo.org> +libgusb-0.2.4.ebuild:
  Version bump

  19 Jan 2015; Jeroen Roovers <jer@gentoo.org> libgusb-0.1.6-r1.ebuild:
  Stable for HPPA (bug #536694).

*libgusb-0.1.6-r1 (22 Nov 2014)

  22 Nov 2014; Michał Górny <mgorny@gentoo.org> +libgusb-0.1.6-r1.ebuild:
  Introduce multilib support as needed for x11-libs/gtk+:3.

  24 Jul 2014; Samuli Suominen <ssuominen@gentoo.org> libgusb-0.1.6.ebuild:
  Use virtual/libgudev with := for automatic rebuild instead of virtual/udev.

  26 Apr 2014; Pacho Ramos <pacho@gentoo.org> -libgusb-0.1.4.ebuild:
  drop old

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.6.ebuild:
  Fix wrong commit, bug 502160

  22 Feb 2014; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.6.ebuild:
  arch stable, bug 888

  22 Dec 2013; Jeroen Roovers <jer@gentoo.org> libgusb-0.1.6.ebuild:
  Stable for HPPA (bug #478252).

  08 Dec 2013; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.6.ebuild:
  x86 stable, bug #478252

  30 Nov 2013; Pacho Ramos <pacho@gentoo.org> libgusb-0.1.6.ebuild:
  amd64 stable, bug #478252

*libgusb-0.1.6 (07 Apr 2013)

  07 Apr 2013; Pacho Ramos <pacho@gentoo.org> +libgusb-0.1.6.ebuild,
  -libgusb-0.1.3.ebuild:
  Version bump, drop old.

  28 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libgusb-0.1.4.ebuild:
  Stable for arm, wrt bug #458984

  26 Mar 2013; Jeroen Roovers <jer@gentoo.org> libgusb-0.1.4.ebuild:
  Stable for HPPA (bug #458984).
